tests/ui/errors/invalid_child.rs
use leptos_mview::view;

fn main() {
    let a = "a";
    view! {
        (a)
    };
}